Post Paging 기능 변경