@@ -1,31 +1,28 @@
 package bobong.crud.domain.post.dto;
 
 import bobong.crud.domain.post.entity.Post;
-import lombok.Data;
+import lombok.Builder;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
-import org.springframework.data.domain.Page;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
-@Data
+@Getter
 @NoArgsConstructor
 public class PostPagingDto {
 
-    private int totalPageCount;//총 몇페이지가 존재하는지
-    private int currentPageNum;//현재 몇 페이지인지
-    private long totalElementCount; //존재하는 게시글의 총 개수
-    private int currentPageElementCount; //현재 페이지에 존재하는 게시글 수
+    private List<PostInfoDto> postInfoDtoList = new ArrayList<>();
 
+    private Long totalPages;
 
-    private List<BriefPostInfo> simpleLectureDtoList = new ArrayList<>();
+    private Long totalCount;
 
-
-    public PostPagingDto(Page<Post> searchResults) {
-        this.totalPageCount = searchResults.getTotalPages();
-        this.currentPageNum = searchResults.getNumber();
-        this.totalElementCount = searchResults.getTotalElements();
-        this.currentPageElementCount = searchResults.getNumberOfElements();
-        this.simpleLectureDtoList = searchResults.getContent().stream().map(BriefPostInfo::new).toList();
+    @Builder
+    public PostPagingDto(List<Post> postList, Long totalPages, Long totalCount) {
+        this.postInfoDtoList = postList.stream().map(PostInfoDto::new).collect(Collectors.toList());
+        this.totalPages = totalPages;
+        this.totalCount = totalCount;
     }
 }
